@@ -26,7 +26,7 @@ try:
 except ImportError:
     from semver import VersionInfo
 
-__version__ = VersionInfo(major=1, minor=7, patch=0, prerelease="rc.2")  # , prerelease="rc.1"
+__version__ = VersionInfo(major=1, minor=7, patch=0, prerelease="rc.3")  # , prerelease="rc.1"
 # to get the next version:
 # __version__.next_version(x) - with x = "major", "minor", "patch", "prerelease"
 
