@@ -13,6 +13,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
     - Base: copys from builder, texlive and installs only necessary runtime and python environment
     - full or Version_XX: Includes the latest or respective DMT install
 - dmt example bash script which uses the docker container to run a python/dmt script.
+- Generating CycloneDX SBOM from the container
 
 ### Fixed
 
